Style update, width of in/out and status components are fixed with hidden overflow

--- a/ui/src/components/MachInfo/style.css
+++ b/ui/src/components/MachInfo/style.css
@@ -20,3 +20,7 @@
   font-style: italic;
   color: black;
 }
+
+.machine-info {
+  width: 7em;
+}
